Completed full dev deployment via docker-compose
Refer to README.md

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card id="registerCard">
     <mat-tab-group>
-        <mat-tab label="Signin">
+        <mat-tab label="Sign-in">
             <form method="post" action="login">
                 <mat-form-field>
                     <input required matInput placeholder="Username" id="login_username" type="text" name="username">
@@ -15,7 +15,7 @@
                 </mat-card-actions>
             </form>
         </mat-tab>
-        <mat-tab label="Signup">
+        <mat-tab label="Sign-up">
             <form>
                 <mat-form-field>
                     <input required matInput placeholder="Username" id="signup_username" type="text" name="username">
