--- a/static/templates/signup.html
+++ b/static/templates/signup.html
@@ -7,6 +7,7 @@
 <body>
 <h1>SignUp Page</h1>
 <form method="POST" action="/signup">
+    <input type="email" name="email" placeholder="email">
     <input type="text" name="username" placeholder="username">
     <input type="password" name="password" placeholder="password">
     <input type="submit" value="SignUp">
