--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,7 +1,148 @@
 <mat-card id="homeButtons">
 	<mat-tab-group>
+		<mat-tab label="Channels">
+			<mat-accordion>
+				<mat-expansion-panel>
+					<mat-expansion-panel-header>
+						<mat-panel-title> Owned Channels </mat-panel-title>
+						<mat-panel-description>	Your created channels </mat-panel-description>
+					</mat-expansion-panel-header>
+					<mat-table #table [dataSource]="dataSource">
+						<!--Channel Name Column-->
+						<ng-container matColumnDef="ChannelName">
+							<mat-header-cell *matHeaderCellDef> Channel Name </mat-header-cell>
+							<mat-cell *matCellDef="let element"><a mat-button href="message">{{element.ChannelName}}</a></mat-cell>
+							<!-- Also bind the selected channel id!!!! -->
+						</ng-container>
+
+						<!--Channel User Count Column-->
+						<ng-container matColumnDef="UserCount">
+						  <mat-header-cell *matHeaderCellDef> User Count </mat-header-cell>
+						  <mat-cell *matCellDef="let element"> {{element.UserCount}} </mat-cell>
+						</ng-container>
+
+						<!--Channel Prefered Comm Column-->
+						<ng-container matColumnDef="CommType">
+						  <mat-header-cell *matHeaderCellDef> Comm Type </mat-header-cell>
+						  <mat-cell *matCellDef="let element"> {{element.CommType}} </mat-cell>
+						</ng-container>
+
+						<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+	    			<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+					</mat-table>
+				</mat-expansion-panel>
+				<mat-expansion-panel>
+					<mat-expansion-panel-header>
+						<mat-panel-title>	Subscribed Channels </mat-panel-title>
+						<mat-panel-description> Your subscribed channels </mat-panel-description>
+					</mat-expansion-panel-header>
+					<span> Fill this area with channel buttons as well </span>
+				</mat-expansion-panel>
+			</mat-accordion>
+		</mat-tab>
+
+		<mat-tab label="User Preferences">
+			<mat-accordion>
+				<mat-expansion-panel>
+					<mat-expansion-panel-header>
+						<mat-panel-title> User Mails </mat-panel-title>
+						<mat-panel-description> Your e-mail list and edit options </mat-panel-description>
+					</mat-expansion-panel-header>
+					<mat-list>
+						<mat-list-item *ngFor="let email of emails">
+							<button mat-button>Edit: {{email.name}}	| {{email.view}}</button>
+						</mat-list-item>
+					</mat-list>
+					<form>
+						<mat-form-field>
+							<input matInput placeholder="Email Name" id="email_name" type="text" name="emailName">
+						</mat-form-field>
+						<mat-form-field>
+							<input matInput placeholder="New Email" id="new_email" type="text" name="newEmail">
+						</mat-form-field>
+						<button mat-button>Submit</button>
+					</form>
+				</mat-expansion-panel>
+				<mat-expansion-panel>
+					<mat-expansion-panel-header>
+						<mat-panel-title> User Phone Numbers </mat-panel-title>
+						<mat-panel-description> Your phone number list and edit options </mat-panel-description>
+					</mat-expansion-panel-header>
+					<mat-list>
+						<mat-list-item *ngFor="let phone of phones">
+							<button mat-button>Edit: {{phone.name}}	| {{phone.view}}</button>
+						</mat-list-item>
+					</mat-list>
+					<form>
+						<mat-form-field>
+							<input matInput placeholder="Phone Name" id="phone_name" type="text" name="phoneName">
+						</mat-form-field>
+						<mat-form-field>
+							<input matInput placeholder="New Phone Number" id="new_phone" type="text" name="newPhone">
+						</mat-form-field>
+						<button mat-button>Submit</button>
+					</form>
+				</mat-expansion-panel>
+				<mat-expansion-panel>
+					<mat-expansion-panel-header>
+						<mat-panel-title> User Preferences </mat-panel-title>
+						<mat-panel-description> Your default channel preferences and edit options </mat-panel-description>
+					</mat-expansion-panel-header>
+					<form label="Channel Preset">
+						<mat-form-field>
+							<mat-select [(ngModel)]="selectedNav" (change)="setNav(selectedNav)"
+							  name="CommType" name="PrefCommType" placeholder="Choose Comm Type">
+								<mat-option *ngFor="let commType of commTypes" [value]="commType.view">
+								{{commType.view}}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
+						<div *ngIf="regTypeSelectedOption === 'email'">
+							<mat-form-field>
+								<mat-select placeholder="Choose E-mail">
+									<mat-option *ngFor="let email of emails" [value]="email.view">
+									{{email.name}} - {{email.view}}
+									</mat-option>
+								</mat-select>
+							</mat-form-field>
+						</div>
+						<div *ngIf="regTypeSelectedOption === 'sms'">
+							<mat-form-field>
+								<mat-select placeholder="Choose Phone">
+									<mat-option *ngFor="let phone of phones" [value]="phone.view">
+									{{phone.name}} - {{phone.view}}
+									</mat-option>
+								</mat-select>
+							</mat-form-field>
+						</div>
+						<mat-form-field>
+							<mat-select placeholder="Choose Active Days" multiple>
+								<mat-option *ngFor="let day of days" [value]="day.view">
+								{{day.view}}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
+						<br/>
+						<mat-form-field>
+							<mat-select placeholder="Choose Active Hour Begin">
+								<mat-option *ngFor="let hour of hours" [value]="hour.view">
+								{{hour.view}}
+								</mat-option>
+							</mat-select>
+						</mat-form-field>
+						<br/>
+							<mat-form-field>
+								<input matInput placeholder="Channel Hours" id="channel_hour"
+								type="number" name="channelHour" required>
+							</mat-form-field>
+							<button mat-button>Save Preset</button>
+					</form>
+				</mat-expansion-panel>
+				</mat-accordion>
+		</mat-tab>
+
 		<mat-tab label="Create A Channel">
-			<mat-vertical-stepper [linear]="true">
+			<mat-horizontal-stepper [linear]="true">
 				<mat-step label="Name Your Channel" [stepControl]="nameForm">
 					<form>
 						<mat-form-field>
@@ -12,12 +153,31 @@
 				<mat-step label="Configure Communication Type" [stepControl]="commForm">
 					<form>
 						<mat-form-field>
-							<mat-select placeholder="Choose Comm Type">
+							<mat-select [(ngModel)]="selectedNav" (change)="setNav(selectedNav)"
+							  name="CommType" name="CommType" placeholder="Choose Comm Type">
 								<mat-option *ngFor="let commType of commTypes" [value]="commType.view">
 								{{commType.view}}
 								</mat-option>
 							</mat-select>
 						</mat-form-field>
+						<div *ngIf="regTypeSelectedOption === 'email'">
+							<mat-form-field>
+								<mat-select placeholder="Choose E-mail">
+									<mat-option *ngFor="let email of emails" [value]="email.view">
+									{{email.name}} - {{email.view}}
+									</mat-option>
+								</mat-select>
+							</mat-form-field>
+						</div>
+						<div *ngIf="regTypeSelectedOption === 'sms'">
+							<mat-form-field>
+								<mat-select placeholder="Choose Phone">
+									<mat-option *ngFor="let phone of phones" [value]="phone.view">
+									{{phone.name}} - {{phone.view}}
+									</mat-option>
+								</mat-select>
+							</mat-form-field>
+						</div>
 					</form>
 				</mat-step>
 				<mat-step label="Configure Active Hours" [stepControl]="timeForm">
@@ -57,98 +217,7 @@
 						</mat-card-actions>
 					</form>
 				</mat-step>
-			</mat-vertical-stepper>
-		</mat-tab>
-
-		<mat-tab label="Channels">
-				<mat-table #table [dataSource]="dataSource">
-
-					<!--Channel Name Column-->
-					<ng-container matColumnDef="ChannelName">
-						<mat-header-cell *matHeaderCellDef> Channel Name </mat-header-cell>
-						<mat-cell *matCellDef="let element"><button mat-button>{{element.ChannelName}}</button></mat-cell>
-					</ng-container>
-
-					<!--Channel User Count Column-->
-					<ng-container matColumnDef="UserCount">
-					  <mat-header-cell *matHeaderCellDef> User Count </mat-header-cell>
-					  <mat-cell *matCellDef="let element"> {{element.UserCount}} </mat-cell>
-					</ng-container>
-
-					<!--Channel Prefered Comm Column-->
-					<ng-container matColumnDef="CommType">
-					  <mat-header-cell *matHeaderCellDef> Comm Type </mat-header-cell>
-					  <mat-cell *matCellDef="let element"> {{element.CommType}} </mat-cell>
-					</ng-container>
-
-					<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    			<mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-
-				</mat-table>
-		</mat-tab>
-
-		<mat-tab label="User Preferences">
-					User Mails<br/>
-					<mat-list>
-						<mat-list-item *ngFor="let email of emails">
-							<button mat-button>Edit: {{email.name}}	| {{email.view}}</button>
-						</mat-list-item>
-					</mat-list>
-					<form>
-						<mat-form-field>
-							<input matInput placeholder="Email Name" id="email_name" type="text" name="emailName">
-						</mat-form-field>
-						<mat-form-field>
-							<input matInput placeholder="New Email" id="new_email" type="text" name="newEmail">
-						</mat-form-field>
-						<button mat-button>Submit</button>
-					</form>
-					User Phone Numbers<br/>
-					<mat-list>
-						<mat-list-item *ngFor="let phone of phones">
-							<button mat-button>Edit: {{phone.name}}	| {{phone.view}}</button>
-						</mat-list-item>
-					</mat-list>
-					<form>
-						<mat-form-field>
-							<input matInput placeholder="Phone Name" id="phone_name" type="text" name="phoneName">
-						</mat-form-field>
-						<mat-form-field>
-							<input matInput placeholder="New Phone Number" id="new_phone" type="text" name="newPhone">
-						</mat-form-field>
-						<button mat-button>Submit</button>
-					</form>
-					<form label="Channel Preset">
-						User preset<br/>
-						<mat-form-field>
-							<mat-select placeholder="Choose Comm Type">
-								<mat-option *ngFor="let commType of commTypes" [value]="commType.view">
-								{{commType.view}}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-						<mat-form-field>
-							<mat-select placeholder="Choose Active Days" multiple>
-								<mat-option *ngFor="let day of days" [value]="day.view">
-								{{day.view}}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-						<br/>
-						<mat-form-field>
-							<mat-select placeholder="Choose Active Hour Begin">
-								<mat-option *ngFor="let hour of hours" [value]="hour.view">
-								{{hour.view}}
-								</mat-option>
-							</mat-select>
-						</mat-form-field>
-						<br/>
-							<mat-form-field>
-								<input matInput placeholder="Channel Hours" id="channel_hour"
-								type="number" name="channelHour" required>
-							</mat-form-field>
-							<button mat-button>Save Preset</button>
-					</form>
+			</mat-horizontal-stepper>
 		</mat-tab>
 	</mat-tab-group>
 </mat-card>
