Implement logging, change default path to login and divide auth

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -9,7 +9,9 @@
 	  </a>
 	</nav>
 
-	<router-outlet></router-outlet>
+	<div class="padded-content">
+		<router-outlet></router-outlet>
+	</div>
 
 </mat-card>
 	<!-- <mat-tab-group>
