Implement notifications, AuthGuard, generalize AppState, custom favicon

--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
     <br/>
     <mat-card-actions>
-        <button mat-raised-button name="submit" color="accent">
+        <button mat-raised-button name="submit" color="accent" (click)="register()">
             Register
         </button>
     </mat-card-actions>
