--- a/frontend/src/app/reply/reply.component.html
+++ b/frontend/src/app/reply/reply.component.html
@@ -1,9 +1,11 @@
-<mat-card id="ReplyToChannel">
-  <form method="POST" action="reply">
-    <mat-form-field>
-        <textarea matTextareaAutosize matAutosizeMinRows="3"
-        matAutosizeMaxRows="8" required matInput placeholder="Type your message here.." id="message" type="text" name="message"></textarea>
-    </mat-form-field>
-    <button mat-raised-button>SEND</button>
-  </form>
+<mat-card id="homeButtons">
+    <div class="padded-content">
+        <form method="POST" action="reply">
+          <mat-form-field>
+              <textarea matTextareaAutosize matAutosizeMinRows="3"
+              matAutosizeMaxRows="8" required matInput placeholder="Type your message here..." id="message" type="text" name="message"></textarea>
+          </mat-form-field>
+          <button mat-raised-button>SEND</button>
+        </form>
+    </div>
 </mat-card>
