--- a/frontend/src/app/home/user-preferences/user-preferences.component.html
+++ b/frontend/src/app/home/user-preferences/user-preferences.component.html
@@ -11,8 +11,8 @@
       </mat-card-header>
       <mat-card-content>
         <mat-list>
-          <mat-list-item *ngFor="let email of emails">
-            <button mat-button>Edit: {{email.name}} | {{email.view}}</button>
+          <mat-list-item *ngFor="let email of comms | async | commFilter: 'EMAIL'">
+            <button mat-button>Edit: {{email.value}}</button>
           </mat-list-item>
         </mat-list>
       </mat-card-content>
@@ -30,8 +30,8 @@
       </mat-card-header>
       <mat-card-content>
         <mat-list>
-          <mat-list-item *ngFor="let phone of phones">
-            <button mat-button>Edit: {{phone.name}} | {{phone.view}}</button>
+          <mat-list-item *ngFor="let phone of comms | async | commFilter: 'SMS'">
+            <button mat-button>Edit: {{phone.value}}</button>
           </mat-list-item>
         </mat-list>
       </mat-card-content>
