--- a/frontend/src/app/home/channels/channels.component.html
+++ b/frontend/src/app/home/channels/channels.component.html
@@ -8,7 +8,7 @@
       <!--Channel Name Column-->
       <ng-container matColumnDef="ChannelName">
         <mat-header-cell *matHeaderCellDef> Channel Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"><a mat-button routerLink="/channel">{{element.name}}</a></mat-cell>
+        <mat-cell *matCellDef="let element"><a mat-button routerLink="/channel/{{element.name}}">{{element.name}}</a></mat-cell>
         <!-- Also bind the selected channel id!!!! -->
       </ng-container>
 
