Proper home url (not sure if affects anything)

--- a/frontend/src/app/toolbar/toolbar.component.html
+++ b/frontend/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span><a routerLink="/home">ChannelX <span *ngIf="user | async">| {{(user | async).username}}</span></a></span> 
+    <span><a routerLink="/home/">ChannelX <span *ngIf="user | async">| {{(user | async).username}}</span></a></span> 
     <span class="extend-filler"></span>
 
     <!-- Sign in olmadıkça home gösterme -->
