--- a/frontend/src/app/channel/channel.component.scss
+++ b/frontend/src/app/channel/channel.component.scss
@@ -1,15 +1,13 @@
+$content-padding: 24px 24px 0 24px;
+
 .padded-content {
-    padding: 10px;
+    padding: $content-padding;
 }
 
 
 #homeButtons {
     margin: 40px;
     padding: 0;
-}
-
-.home-navigation {
-    margin-bottom: 20px;
 }
 
 div.mat-tab-links {
