--- a/frontend/src/app/home/user-preferences/user-preferences.component.html
+++ b/frontend/src/app/home/user-preferences/user-preferences.component.html
@@ -52,26 +52,22 @@
       <mat-card-content>
         <form>
           <mat-form-field>
-            <mat-select placeholder="Type" id="comm_type" name="commType">
-              <mat-option value="mail">
+            <mat-select placeholder="Type" id="comm_type" name="commType" [(ngModel)]="addComm.comm_type">
+              <mat-option value="EMAIL">
                 Email
               </mat-option>
-              <mat-option value="sms">
+              <mat-option value="SMS">
                 SMS
               </mat-option>
             </mat-select>
           </mat-form-field>
-          
           <mat-form-field>
-            <input matInput placeholder="Name" id="comm_name" type="text" name="commName">
-          </mat-form-field>
-          <mat-form-field>
-            <input matInput placeholder="Number/Mail" id="comm_value" type="text" name="commValue">
+            <input matInput placeholder="Number/Mail" id="comm_value" type="text" [(ngModel)]="addComm.value" name="commValue">
           </mat-form-field>
         </form>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button>ADD</button>
+        <button mat-button (click)="addCommunication()">ADD</button>
       </mat-card-actions>
     </mat-card>
   </div>
