--- a/frontend/src/app/interval/interval.component.scss
+++ b/frontend/src/app/interval/interval.component.scss
@@ -21,3 +21,21 @@ button.close {
     margin: 10px 5px 10px 0px;
     z-index: 1;
 }
+
+.intervals {
+    display: flex;
+    overflow-x: scroll;
+}
+
+div.intervals {
+    position: relative;
+    min-height: 300px;
+    padding-left: 64px;
+}
+
+button.fab {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 8px;
+}
