--- a/frontend/src/app/home/create-channel/create-channel.component.html
+++ b/frontend/src/app/home/create-channel/create-channel.component.html
@@ -32,7 +32,7 @@
     </mat-form-field>
     <br/>
     <div>
-      <app-interval [(intervals)]="intervals"></app-interval>
+      <!-- <app-interval [(intervals)]="intervals"></app-interval> -->
     </div>
     <br/>
     <span matToolTip="ToolTip!">Load the preset while loading this page</span>
