--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -1,7 +1,8 @@
-$content-padding: 24px 24px 0 24px;
+$content-padding: 12px;
 
 .padded-content {
     padding: $content-padding;
+    display: grid;
 }
 
 
