--- a/frontend/src/app/home/user-preferences/user-preferences.component.html
+++ b/frontend/src/app/home/user-preferences/user-preferences.component.html
@@ -11,8 +11,8 @@
       </mat-card-header>
       <mat-card-content>
         <mat-list>
-          <mat-list-item *ngFor="let email of comms | async | commFilter: 'EMAIL'">
-            <button mat-button>Edit: {{email.value}}</button>
+          <mat-list-item *ngFor="let email of user.communications | commFilter: 'EMAIL'">
+            <button mat-button matTooltip="Click to Remove" matTooltipPosition="before" (click)="removeCommunication(email)">{{email.value}}</button>
           </mat-list-item>
         </mat-list>
       </mat-card-content>
@@ -30,8 +30,8 @@
       </mat-card-header>
       <mat-card-content>
         <mat-list>
-          <mat-list-item *ngFor="let phone of comms | async | commFilter: 'SMS'">
-            <button mat-button>Edit: {{phone.value}}</button>
+          <mat-list-item *ngFor="let phone of user.communications | commFilter: 'SMS'">
+            <button mat-button matTooltip="Click to Remove" matTooltipPosition="before" (click)="removeCommunication(phone)">{{phone.value}}</button>
           </mat-list-item>
         </mat-list>
       </mat-card-content>
@@ -72,4 +72,21 @@
     </mat-card>
   </div>
 </div>
+<div class="pref-container">
+  <div class="pref-container-cell">
+    <mat-card class="sub-content">
+      <mat-card-header>
+        <mat-card-title>
+          Default Channel Preferences
+        </mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <!-- <app-interval [(intervals)]="user.preferences.intervals"></app-interval> -->
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
+<mat-card-actions style="margin-bottom: -8px; padding-left: 16px;">
+  <button mat-button (click)="console.log('save')">SAVE</button>
+</mat-card-actions>
 
