--- a/frontend/src/app/home/user-preferences/user-preferences.component.scss
+++ b/frontend/src/app/home/user-preferences/user-preferences.component.scss
@@ -1,6 +1,7 @@
 @import '~@angular/material/theming';
 
 mat-card.sub-content {
+    // padding: 8px;
 
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
@@ -30,6 +31,7 @@ div.sample {
 }
 
 div.pref-container {
+    margin: -12px;
     display: flex;
 }
 
