--- a/frontend/src/app/channel/broadcast/broadcast.component.html
+++ b/frontend/src/app/channel/broadcast/broadcast.component.html
@@ -1,7 +1,10 @@
-<form method="post" action="broadcast">
+<div>
   <mat-form-field>
       <textarea matTextareaAutosize matAutosizeMinRows="3"
       matAutosizeMaxRows="8" required matInput placeholder="Type your message here.." id="message" type="text" name="message"></textarea>
   </mat-form-field>
-  <button mat-raised-button>SEND</button>
-</form>
+</div>
+
+<mat-card-actions>
+<button mat-button>SEND</button>
+</mat-card-actions>
