Send message completed.

--- a/frontend/src/app/channel/channel.component.html
+++ b/frontend/src/app/channel/channel.component.html
@@ -10,6 +10,7 @@
   </nav>
 
   <div class="padded-content">
+    <span id="channelName">{{channelId}}</span>
     <router-outlet></router-outlet>
   </div>
 
