--- a/frontend/src/app/channel/broadcast/broadcast.component.html
+++ b/frontend/src/app/channel/broadcast/broadcast.component.html
@@ -1,10 +1,10 @@
 <div>
   <mat-form-field>
       <textarea matTextareaAutosize matAutosizeMinRows="3"
-      matAutosizeMaxRows="8" required matInput placeholder="Type your message here.." id="message" type="text" name="message"></textarea>
+      matAutosizeMaxRows="8" required matInput placeholder="Type your message here.." id="message" type="text" name="message" [(ngModel)]="message"></textarea>
   </mat-form-field>
 </div>
 
 <mat-card-actions>
-<button mat-button>SEND</button>
+<button mat-button (click)="SendMessage()">SEND</button>
 </mat-card-actions>
